hphp/hack/test/typecheck/generic_subtyping3.php.exp
File "generic_subtyping3.php", line 43, characters 14-20:
Invalid argument (Typing[4110])
File "generic_subtyping3.php", line 32, characters 19-22:
Expected bool
File "generic_subtyping3.php", line 37, characters 21-21:
But got int
